overflow fixed on content page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,7 +36,8 @@
 #wrapper {
     padding-left: 45px;
     transition: all .4s ease 0s;
-    height: 100%
+    height: 100%;
+    background-color: #3FA9F511;
 }
 
 #sidebar-wrapper {
